# fedflow

./: .gitignore  NOTES.md  README.md  Vagrantfile  config_template.toml  pyproject.toml
FedSim/: ClientManager.py  clients.py  config.py  contribute_project.py  create_project.py  fabric_utils.py  featurecloud_api.py  featurecloud_user.py  fedsim.py  fedsim_biosphere.py  fedsim_vagrant.py  join_project.py  logger.py  monitor_project.py  participate_workflow.py  prep_environment.py  provision_environment.py  remote_client.py  reset_project.py  run_workflow.py  start_workflow.py  test_fabric.py  test_remote_featurecloud.py  utils.py  utils_fabric.py  utils_vm.py  vm_interaction.py
VMs/: Vagrantfile  biosphere_provision.sh  common_dependencies.sh  requirements.txt  vagrant_provision.sh
analysis/: .gitignore  README.md  env.yaml
code/: playwright_playground.py
configs/: config.toml  config_mean_solo.toml  config_mean_trio.toml  config_provision_biosphere.toml  config_randfor_public.toml  config_randfor_solo.toml  config_svd_duo.toml  config_svd_solo.toml
data/: client0.txt  site_info.json
example/: config_fedflow.toml  config_mean.toml
fedflow/: ClientManager.py  VagrantManager.py  cli.py  config.py  featurecloud_api.py  logger.py  provision.py
fedsim/: ClientManager.py  VagrantManager.py  cli.py  config.py  fcauto.py  featurecloud_api.py  fedsim.py  provision.py  utils.py  utils_fabric.py
figures/: fedflow_overview.excalidraw  fedflow_remote.excalidraw
resources/: config_svd.toml  config_svd_solo.toml
scripts/: prep_public_cohorts.py  provision.sh  (+3 more)
(+73 files in other folders)
