
[tool.hatch.version]
path = "fedsim/__init__.py"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "fedsim"
description = "Simulated federated analyses with VMs "
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.2.1",
    "fabric==3.2.2",
    "FeatureCloud==0.1.0",
    "httpx==0.28.1",
    "rtoml==0.13.0",
]

[tool.hatch.publish]
disable = true


[project.scripts]
fedsim = "fedsim.fedsim:main"
fcauto = "fedsim.fcauto:main"


[tool.hatch.build.targets.sdist]
only-include = [
  "fedsim/",
  "VMs/",
  "configs/",
  "scripts/",
]


[tool.hatch.build.targets.wheel]
packages = ["fedsim"]


[tool.hatch.envs.dev]
dependencies = [
  "hatch",
  "pytest",
  "pytest-cov",
]



[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

